fixed input text alignment

--- a/style.css
+++ b/style.css
@@ -61,11 +61,10 @@ input>.user_location , .addSpecialty{
     margin-right: auto;
 }
 .user_location{
-    text-indent: 10px;;
+    text-align: center;
 }
 .radius{
-    width: 10%;
-    text-indent: 5px;
+    width: 20%;
     margin-bottom: 10px;
     margin-top: 10px;
     text-align: center;
@@ -107,13 +106,13 @@ option{
 select{
   appearance: none;
   font-family: 'Montserrat', sans-serif; 
-  width: 75%;
+  width: auto;
   cursor: pointer;
 }
 .addSpecialty{
   position: relative;
   display: block;
-  height: 170px;
+  height:auto;
   
 }
 .specialty_uid::selection{
